# event-organizer

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/bot/: __main__.py  bot.py
backend/src/: __main__.py  app.py  models.py  utils.py
backend/src/auth/: dependencies.py  fastapi_users.py  models.py  routes.py
backend/src/callback/: routers.py
backend/src/config/: authentication.py  database.py  server.py
backend/src/events/: dao.py  models.py  routes.py  schemas.py
backend/src/events/feautures/: routes.py  schemas.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 150a75e885d6_add_requires_participants_flag.py  3cccbffcd35d_add_event_feautures.py  5c47071d8ba5_add_participant_role.py  5c4df5a2b349_create_event_participant.py  8792078c368d_add_logo_for_event.py  8d13e89e9cd0_add_event_feautures.py  be390edda070_add_status_for_event_particiaptions.py  df7e365884e3_add_status_for_event_particiaptions.py  fcbbe20acad4_add_artifacts.py
backend/src/s3/: manager.py  settings.py
backend/src/users/: dao.py  models.py  schemas.py
bot/: __main__.py  bot.py  settings.py
frontend/: Dockerfile  docker-compose.yml  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js  routes.js
frontend/src/components/: AdminRequestsSidebar.js  AppRouter.js  EventDetails.js  EventItem.js  EventList.js  InfoSubEvent.js  Menu.js  Navbar.js  ParticipantsSidebar.js  RequireAuth.js  SubEvents.js  SubEventsList.js  ToastAlert.js
frontend/src/components/helper/: RequestStatus.js
frontend/src/components/modals/: CreateEvent.js  CreateRequest.js  CreateSubEvent.js  LogoUploadModal.js  QuestionModal.js  ShowDetails.js  ShowDocuments.js  SubEventParticipantsModal.js
frontend/src/http/: EventApi.js  handleError.js  index.js  userApi.js
frontend/src/pages/: AboutPage.js  Auth.js  EventPage.js  Events.js  Main.js  PersonalAccount.js  Profile.js  Requests.js  Test.js
frontend/src/store/: EventStore.js  UserStore.js
frontend/src/utils/: consts.js
src/: app.py  dao.py  models.py  schemas.py
src/auth/: db_helper.py  dependencies.py  fastapi_users.py  models.py  routes.py  transport.py
src/config/: authentication.py  database.py  db.py  server.py
src/events/: dao.py  models.py  routes.py  schemas.py
src/ioc/: container.py
src/ioc/providers/: authentication.py  database.py  user.py
src/migrations/: env.py
src/migrations/versions/: 01d3af1cfd4e_added_access_token_model_and_user.py  1053f442c1aa_added_access_token_model.py  23840c5cb367_update_user_model.py  5c03a3ead273_added_user_model.py  c26eee972024_added_events.py
src/users/: dao.py  manager.py  models.py  routes.py  schemas.py
